# Logger

./: index.html  package.json  tailwind.config.js  vite.config.ts
migrations/: 0001_daily_checkins.sql  0001_initial_schema.sql  0002_migraine_events.sql  0003_trigger_types_and_join.sql  0004_activity_sessions.sql  0005_calendar_weather.sql  0006_settings_reminders.sql
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/: error.rs  mod.rs  models.rs  service.rs
src/components/: AppShell.tsx
src/components/checkin/: DailyCheckinForm.tsx
src/pages/: ActivityPage.tsx  HistoryPage.tsx  MigrainePage.tsx  PagePlaceholder.tsx  SettingsPage.tsx  TodayPage.tsx  TrendsPage.tsx
